--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,445 @@
-.App {
-  text-align: center;
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Carter+One&family=Roboto:wght@400;500;700&family=Sriracha&display=swap");
+* {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  background-color: #fff;
+  font-family: 'Roboto', sans-serif; }
+
+a {
+  color: rgba(255, 255, 255, 0.75); }
+
+a:hover {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: none; }
+
+#grid {
+  display: grid;
+  overflow-x: hidden;
+  position: absolute;
+  margin-left: -13em;
+  transition: all .5s ease-in-out;
+  grid-template-columns: 15em calc(100% - 1em);
+  grid-gap: 1em;
+  grid-template-areas: ". main"; 
+  margin-top: 60px;}
+
+  #gridhome {
+    display: grid;
+    overflow-x: hidden;
+    position: relative;
+    margin-left: -13em;
+    transition: all .5s ease-in-out;
+    grid-template-columns: 15em calc(100% - 1em);
+    grid-gap: 1em;
+    grid-template-areas: ". main"; 
+    margin-top: 60px;}
+
+nav {
+  grid-row: 1;
+  grid-column: 1;
+  padding-top: 30px; }
+
+nav.logo {
+  margin-left: 0; }
+
+.fa-bars {
+  color: #83c683;
+  border: 1px dotted #83c683;
+  border-radius: 4px;
+  padding: 5px 8px; }
+
+.bg {
+  background-image: url("./img/cz-home-img.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  margin-top: -145px;}
+
+  .navbar a {
+    color: #83c683;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-dark .navbar-toggler {
+  border: none; }
+
+.main {
+  grid-area: main;
+  grid-column: 2;
+  padding-top: 60px;
+  padding-right: 15em;
+  margin-left: 1.5em;
+  margin-bottom: 8em;
+  margin-right: 2em; 
+  background-image: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar-brand {
+  margin-right: 7rem; }
+
+.navbar-expand-lg .navbar-brand {
+  padding-right: 2rem; }
+
+.nav-link {
+    margin-right: 1.5em;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.tab {
+  display: none;
+  padding: .25em .5em;
   color: white;
-}
+  background: #343a40;
+  border: none;
+  transform: rotate(90deg);
+  letter-spacing: 2px;
+  cursor: pointer;
+  transition: all .5s ease-in-out; }
 
-.App-link {
-  color: #61dafb;
-}
+.tab:focus {
+  outline-color: #fff; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.tab {
+  position: fixed;
+  display: block;
+  top: 8em;
+  left: 0em; }
+
+.tab:hover {
+  color: #83c683; }
+
+.tab.reveal {
+  left: 13em;
+  transition: all .5s ease-in-out; }
+
+  .tabhome {
+    display: none;
+    padding: .25em .5em;
+    color: white;
+    background: #343a40;
+    border: none;
+    transform: rotate(90deg);
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: all .5s ease-in-out; }
+  
+  .tabhome:focus {
+    outline-color: #fff; }
+  
+  .tabhome {
+    position: fixed;
+    display: block;
+    top: 8em;
+    left: 0em; }
+  
+  .tabhome:hover {
+    color: #83c683; }
+  
+  .tabhome.reveal {
+    left: 13em;
+    transition: all .5s ease-in-out; }
+
+#grid.reveal {
+  margin-left: 0;
+  transition: all .5s ease-in-out; }
+
+  #gridhome.reveal {
+    margin-left: 0;
+    transition: all .5s ease-in-out; }
+
+.mint {
+  color: rgba(131, 198, 131, 0.9); }
+
+.btn-mint {
+  background-color: #83c683;
+  border-color: #83c683;
+  color: #fff; }
+
+.btn-mint:hover {
+  background-color: #79a779;
+  border-color: #79a779; }
+
+a.mint:hover {
+  color: #83c683; }
+
+nav h6 span {
+  color: #79a779;
+  font-size: 1.1em;
+  font-weight: bold;
+  text-decoration: underline; }
+
+.flex-column a.nav-link {
+  color: #212529; }
+
+.flex-column a.nav-link:hover {
+  color: #343a40;
+  background-color: rgba(131, 198, 131, 0.1); }
+
+.bg-mint {
+  background-color: rgba(131, 198, 131, 0.1); }
+
+li.nav-item.active a {
+  color: #83c683 !important;
+  font-weight: bold; }
+
+.table-striped tbody tr:nth-of-type(2n+1) {
+  background-color: rgba(131, 198, 131, 0.1); }
+
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.75); }
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+  color: rgba(255, 255, 255, 0.9); }
+
+.dropdown-menu {
+  color: #fff;
+  background-color: #343a40; }
+
+.dropdown-item {
+  color: #fff; }
+
+.main h4 {
+  margin: 35px 0 15px 0;
+  font-size: 1.3em; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500; }
+
+hr.divider {
+  border-top: 2px solid #7e7e7e;
+  text-align: center;
+  width: 80%;
+  margin: 50px 10%; }
+
+hr.divider:after {
+  content: '♕';
+  display: inline-block;
+  position: relative;
+  top: -25px;
+  padding: 0 10px;
+  background: #fff;
+  color: #8c8b8b;
+  font-size: 28px; }
+
+ul.table-menu li.nav-item a.nav-link {
+  font-size: .8em;
+  color: #212529;
+  margin-bottom: 25px; }
+
+h2.tagline {
+  text-align: center;
+  color: #fff;
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: 3em;
+  margin-top: 80px;
+  text-shadow: 2px 2px 3px #111; }
+
+.cases {
+  text-align: center;
+  background-image: url("/img/muchabg1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: -1em; }
+
+.pagetitle {
+  color: #83c683;
+  text-shadow: 2px 2px 1px #000;
+  font-size: 3em; }
+
+.teacher-name span {
+  font-size: .8em;
+  font-style: italic;
+  color: rgba(33, 37, 41, 0.9); }
+
+.teachers .media {
+  border-bottom: 2px dashed #83c683;
+  padding-bottom: 15px;
+  margin-bottom: 35px; }
+
+.teachers .media:nth-child(4) {
+  border-bottom: none; }
+
+a.teacher-list {
+  display: block;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: #212529;
+  text-align: center; }
+
+a.teacher-list:hover {
+  color: #83c683;
+  text-decoration: underline; }
+
+.fa-vcard-o {
+  display: block;
+  text-align: center;
+  color: #212529;
+  margin-bottom: 10px; }
+
+.teacher-bottom-content {
+  display: flex;
+  justify-content: space-between; }
+
+.teacher-bottom-content a {
+  color: #fff;
+  background: #83c683;
+  display: block;
+  border-radius: 6px;
+  padding: .25em .5em;
+  margin-top: 10px;
+  font-weight: bold; }
+
+.resources .card {
+  margin-bottom: 25px; }
+
+.btn-resources {
+  float: right; }
+
+.test h2 {
+  text-align: center;
+  margin-top: 25px; }
+
+.test h4 {
+  text-align: center;
+  margin: 15px 0 25px; }
+
+.test p {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.5em;
+  font-weight: bold; }
+
+.vocab {
+  background-image: url("/img/muchabg2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: -1em; }
+
+.vocab h2 {
+  text-align: center;
+  margin-top: 25px; }
+
+.vocab p {
+  margin: 15px 0;
+  font-size: 1.2em;
+  text-align: center;
+  font-weight: bold; }
+
+.vocab p span {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 1.1em;
+  display: block; }
+
+.prepositions {
+  background-image: url("/img/muchabg3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: -1em; }
+
+/* flip card */
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 100px;
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
+  margin-bottom: 30px; }
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d; }
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg); }
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #eee;
+  color: #212529; }
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #83c683;
+  color: white;
+  transform: rotateY(180deg); }
+
+@media screen and (max-width: 991px) {
+  .tab {
+    display: none; }
+  .sidebar {
+      display: none; }
+  nav {
+    display: none; }
+  .nav-link {
+    line-height: .8; }
+  h2.tagline {
+    font-size: 2.4em; } }
+
+@media screen and (max-width: 767px) {
+  h2.tagline {
+    font-size: 2em; }
+  .btn-resources {
+    float: left; } }
+
+/*--------------------------------------------------------------
+Accessibility
+--------------------------------------------------------------*/
+/* Text meant only for screen readers */
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden; }
+
+.screen-reader-text:hover,
+.screen-reader-text:active,
+.screen-reader-text:focus {
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  color: #21759b;
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
+  /* Above WP toolbar */ }
+
+
+
+  
