--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ a:hover {
 #grid {
   display: grid;
   overflow-x: hidden;
-  position: absolute;
+  position: relative;
   margin-left: -13em;
   transition: all .5s ease-in-out;
   grid-template-columns: 15em calc(100% - 1em);
@@ -37,7 +37,7 @@ a:hover {
     grid-template-columns: 15em calc(100% - 1em);
     grid-gap: 1em;
     grid-template-areas: ". main"; 
-    margin-top: 60px;}
+    margin-top: 25px;}
 
 nav {
   grid-row: 1;
@@ -59,10 +59,16 @@ nav.logo {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; 
-  margin-top: -145px;}
+  margin-top: -190px;}
 
-  .navbar a {
+.navbar a {
     color: #83c683;
+    margin-right: 3em;
+}
+
+.navbar a:hover {
+  color:rgba(255, 255, 255, 0.75); 
+  text-decoration: none;
 }
 
 .navbar-dark .navbar-toggler {
@@ -73,9 +79,9 @@ nav.logo {
   grid-column: 2;
   padding-top: 60px;
   padding-right: 15em;
-  margin-left: 1.5em;
+  margin-left: 3em;
   margin-bottom: 8em;
-  margin-right: 2em; 
+  margin-right: 3em; 
   background-image: none;
 }
 
@@ -83,7 +89,7 @@ nav.logo {
   margin-right: 7rem; }
 
 .navbar-expand-lg .navbar-brand {
-  padding-right: 2rem; }
+  padding-right: 4em; }
 
 .nav-link {
     margin-right: 1.5em;
@@ -189,14 +195,21 @@ li.nav-item.active a {
   background-color: rgba(131, 198, 131, 0.1); }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.75); }
+  color: rgba(131, 198, 131, 1) !important; } 
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: rgba(255, 255, 255, 0.9); }
+  color: rgba(255, 255, 255, .8) !important; }
+
+  .dropdown-item:focus, .dropdown-item:hover {
+    color: #16181b;
+    text-decoration: none;
+    background-color: #343a40 !important; }
+
+
 
 .dropdown-menu {
   color: #fff;
-  background-color: #343a40; }
+  background-color: #343a40 !important; }
 
 .dropdown-item {
   color: #fff; }
@@ -235,7 +248,7 @@ h2.tagline {
   color: #fff;
   font-family: 'Bubblegum Sans', cursive;
   font-size: 3em;
-  margin-top: 80px;
+  margin-top: 160px;
   text-shadow: 2px 2px 3px #111; }
 
 .cases {
@@ -391,7 +404,7 @@ a.teacher-list:hover {
   transform: rotateY(180deg); }
 
 @media screen and (max-width: 991px) {
-  .tab {
+  .tab, .tabhome {
     display: none; }
   .sidebar {
       display: none; }
